Refactor layout and styles; add new components for audio and video playback

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -17,11 +17,12 @@
   },
   "header": {
     "nav": {
-      "home": "Home",
-      "events": "Events",
-      "gallery": "Gallery",
-      "shop": "Shop",
-      "blog": "News",
+      "home": "HOME",
+      "events": "LE RENDEZ-VOUS SAUVAGE",
+      "gallery": "ARCHIVES",
+      "shop": "MERCH",
+      "room": "ARTISTS",
+      "blog": "STORIES",
       "soon": "Soon"
     },
     "mobileMenu": {
