Update favicon and icon assets; modify global styles for header text color; refactor EventsPage component to simplify parameters; enhance gallery client component error handling; implement copy-paste prevention in horizon component; update footer to include mobile social icons; adjust music track fetching logic to handle errors gracefully; and swap subtitle lines in localization files for consistency.

--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -296,22 +296,22 @@
       "kamayakoi": {
         "title": "KAMAYAKOI",
         "subtitle": {
-          "line1": "Là où le son devient rituel,",
-          "line2": "et le rythme transcende la réalité."
+          "line1": "Les rencontres les plus sauvages de la ville,",
+          "line2": "depuis 2017."
         }
       },
       "rvs": {
         "title": "INTENSE",
         "subtitle": {
-          "line1": "Au-delà du dancefloor ordinaire,",
-          "line2": "se trouve un univers électrique de sensations."
+          "line1": "Au-delà de nos différences,",
+          "line2": "se trouve un océan d'opportunités."
         }
       },
       "liberation": {
         "title": "WILD",
         "subtitle": {
-          "line1": "Dans l'espace entre les beats,",
-          "line2": "nous découvrons nos fréquences les plus sauvages."
+          "line1": "Chaque son est un rituel,",
+          "line2": "chaque mouvement un moment unique."
         }
       }
     }
