--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -100,6 +100,67 @@
       "p2": "We're building more than just parties; we're cultivating a movement. Thank you for being part of the Kamayakoi energy!"
     }
   },
+  "privacyPage": {
+    "pageTitle": "Privacy Policy",
+    "pageDescription": "Learn how Kamayakoi protects and manages your personal information in accordance with our privacy practices.",
+    "title": "Privacy Policy",
+    "subtitle": "Your privacy is important to us. This policy explains how we collect, use, and protect your information.",
+    "lastUpdated": "Last Updated: {date}",
+    "introduction": {
+      "title": "Introduction",
+      "p1": "Kamayakoi (\"we,\" \"us,\" or \"our\") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, purchase tickets, or attend our events.",
+      "p2": "Please read this privacy policy carefully. If you do not agree with the terms of this privacy policy, please do not access our services."
+    },
+    "dataCollection": {
+      "title": "Information We Collect",
+      "p1": "We may collect information about you in a variety of ways. The information we may collect includes:",
+      "listItem1": "Personal Data: Name, email address, phone number, and other contact information when you purchase tickets or subscribe to our updates.",
+      "listItem2": "Event Information: Photos and videos taken during our events that may include your likeness.",
+      "listItem3": "Usage Data: Information about how you access and use our website, including your IP address, browser type, and device information."
+    },
+    "dataUse": {
+      "title": "How We Use Your Information",
+      "p1": "We use the information we collect to:",
+      "listItem1": "Process ticket purchases and send you confirmation details",
+      "listItem2": "Communicate with you about events, updates, and promotional activities",
+      "listItem3": "Improve our services and create better event experiences",
+      "listItem4": "Comply with legal obligations and prevent fraudulent activities"
+    },
+    "dataSharing": {
+      "title": "Information Sharing",
+      "p1": "We do not sell, trade, or rent your personal information to third parties. We may share your information in the following circumstances:",
+      "listItem1": "With service providers who assist us in operating our website and conducting our business",
+      "listItem2": "When required by law or to protect our rights and safety",
+      "listItem3": "With your consent for specific promotional activities or partnerships"
+    },
+    "dataProtection": {
+      "title": "Data Protection",
+      "p1": "We implement appropriate security measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction.",
+      "p2": "However, no method of transmission over the internet or electronic storage is completely secure, and we cannot guarantee absolute security."
+    },
+    "cookies": {
+      "title": "Cookies and Tracking",
+      "p1": "Our website may use cookies and similar tracking technologies to enhance your browsing experience and analyze website traffic.",
+      "p2": "You can choose to disable cookies through your browser settings, though this may affect the functionality of our website."
+    },
+    "rights": {
+      "title": "Your Rights",
+      "p1": "You have the right to:",
+      "listItem1": "Access and update your personal information",
+      "listItem2": "Request deletion of your personal data",
+      "listItem3": "Opt-out of marketing communications",
+      "listItem4": "Request a copy of the information we hold about you"
+    },
+    "retention": {
+      "title": "Data Retention",
+      "p1": "We retain your personal information only for as long as necessary to fulfill the purposes outlined in this privacy policy, comply with legal obligations, or resolve disputes."
+    },
+    "contact": {
+      "title": "Contact Us",
+      "p1": "If you have any questions about this Privacy Policy or our data practices, please contact us at: kamayakoi@gmail.com",
+      "p2": "We are committed to resolving any privacy concerns you may have."
+    }
+  },
   "eventsPage": {
     "metadata": {
       "title": "Rendez-Vous Sauvage",
