Add MiniAudioPlayer component to various pages for improved audio playback on mobile devices. Update Home, Artists, Blog, Shop, and Events pages to include responsive MiniAudioPlayer, ensuring better accessibility for mobile users. Refactor styles in CheckoutButton and PurchaseFormModal for consistency and improved user experience. Enhance ArtistCard component to include a new "ARTIST" label with distinct styling. Adjust layout and styles in various components for better responsiveness and visual appeal.

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -18,7 +18,7 @@
   "header": {
     "nav": {
       "home": "HOME",
-      "events": "LE RENDEZ-VOUS SAUVAGE",
+      "events": "RENDEZ-VOUS SAUVAGE",
       "gallery": "ARCHIVES",
       "shop": "MERCH",
       "room": "ARTISTS",
@@ -175,6 +175,12 @@
     },
     "dateTBC": "Date TBC",
     "timeTBC": "Time TBC",
+    "metaInfo": {
+      "date": "Date",
+      "time": "Time",
+      "location": "Location",
+      "hostedBy": "Hosted by"
+    },
     "availability": {
       "inactive": "Currently Inactive",
       "soldOut": "Sold Out",
@@ -189,7 +195,8 @@
       "title": "Tickets",
       "buyNow": "Buy now",
       "getETicket": "Get E-Ticket",
-      "currencySuffix": " FCFA"
+      "currencySuffix": " FCFA",
+      "selectAndJoin": "Select your tickets and join the experience"
     },
     "bundles": {
       "title": "Bundles"
@@ -198,12 +205,16 @@
       "title": "Details"
     },
     "lineupSection": {
-      "title": "Lineup"
+      "title": "Artists"
     },
     "venueSection": {
       "title": "Venue",
       "mapTitleDefault": "Map of event location",
       "mapTitleNamed": "Map of {locationName}"
+    },
+    "shareSection": {
+      "title": "Share this event",
+      "subtitle": "Spread the word and invite your friends"
     },
     "hostedBy": "Hosted by {name}",
     "errors": {
