Refactor global styles in globals.css to transition the app to dark mode only, removing light mode variables and enhancing focus states for form elements.

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -163,10 +163,10 @@
   },
   "eventsPage": {
     "metadata": {
-      "title": "Rendez-Vous Sauvage",
+      "title": "RENDEZ-VOUS SAUVAGE",
       "description": "Explore upcoming events from Kamayakoi"
     },
-    "title": "Rendez-Vous Sauvage",
+    "title": "RENDEZ-VOUS SAUVAGE",
     "noEvents": "No upcoming events found."
   },
   "eventSlugPage": {
