--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -163,10 +163,10 @@
   },
   "eventsPage": {
     "metadata": {
-      "title": "Rendez-Vous Sauvage",
+      "title": "RENDEZ-VOUS SAUVAGE",
       "description": "Découvrez les prochains événements de Kamayakoi"
     },
-    "title": "Rendez-Vous Sauvage",
+    "title": "RENDEZ-VOUS SAUVAGE",
     "noEvents": "Aucun événement à venir trouvé."
   },
   "eventSlugPage": {
