Remove Blog and Blog Post components, updating routing and links in the Footer and localization files. Change "RENDEZ-VOUS SAUVAGE" to "LE RENDEZ-VOUS SAUVAGE" in both English and French locales, and update links in the Footer to point to "Stories" and "Merch" instead of "Blog" and "Shop".

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -18,7 +18,7 @@
   "header": {
     "nav": {
       "home": "HOME",
-      "events": "RENDEZ-VOUS SAUVAGE",
+      "events": "LE RENDEZ-VOUS SAUVAGE",
       "gallery": "ARCHIVES",
       "shop": "MERCH",
       "room": "ARTISTS",
@@ -185,7 +185,7 @@
       "inactive": "Currently Inactive",
       "soldOut": "Sold Out",
       "salesStart": "Sales start {startDate}",
-      "salesEnded": "Sales have ended",
+      "salesEnded": "Sold out",
       "unavailable": "Unavailable",
       "misconfigured": "Ticketing system error."
     },
