--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -18,7 +18,7 @@
   "header": {
     "nav": {
       "home": "ACCUEIL",
-      "events": "RENDEZ-VOUS SAUVAGE",
+      "events": "LE RENDEZ-VOUS SAUVAGE",
       "gallery": "ARCHIVES",
       "shop": "MERCH",
       "room": "ARTISTES",
